# space-invaders-grok

./: .gitignore  LICENSE  README.md  pyproject.toml
docs/: PROJECT_RULES.md
docs/dev-python-oop/: current-cycle.json
scripts/: generate_sounds.py
src/space_invaders/: __init__.py  __main__.py  main.py
src/space_invaders/adapters/: __init__.py  audio.py  bitmap_font.py  input_adapter.py  renderer.py  score_repository.py  settings_repository.py  sprites.py
src/space_invaders/application/: __init__.py  audio_events.py  high_score.py  settings.py
src/space_invaders/domain/: __init__.py  commands.py  constants.py  entities.py  events.py  factories.py  formation.py  game.py  ports.py  states.py  strategies.py  value_objects.py
tests/domain/: test_entities.py  test_events_commands_states.py  test_factories_strategies.py  test_formation.py  test_game_session.py  test_value_objects.py
