[project]
name = "space-invaders"
version = "1.0.0"
description = "Classic Space Invaders (Taito 1978) clone — clean architecture, pure domain"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
authors = [{ name = "Marvin Braga" }]
dependencies = [
    "pygame>=2.5.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[project.scripts]
space-invaders = "space_invaders.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/space_invaders"]

[tool.hatch.build.targets.wheel.sources]
"src" = ""

[dependency-groups]
dev = [
    "pytest>=8.0.0",
    "pytest-cov>=5.0.0",
    "mypy>=1.8.0",
    "ruff>=0.3.0",
]

[tool.ruff]
line-length = 100
target-version = "py312"
src = ["src", "tests"]

[tool.ruff.lint]
select = ["E", "F", "I", "N", "UP", "B", "C90", "SIM", "RET", "ARG"]

[tool.ruff.lint.mccabe]
max-complexity = 10

[tool.ruff.format]
quote-style = "double"
indent-style = "space"

[tool.mypy]
strict = true
warn_unreachable = true
disallow_any_explicit = true
mypy_path = "src"
packages = ["space_invaders"]

[[tool.mypy.overrides]]
module = ["pygame.*"]
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
pythonpath = ["src"]
addopts = [
    "--cov=space_invaders.domain",
    "--cov-branch",
    "--cov-fail-under=85",
    "-q",
]

[tool.coverage.run]
branch = true
source = ["space_invaders.domain"]

[tool.coverage.report]
show_missing = true
skip_empty = true
